fix: too narrow aside

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,5 +1,5 @@
 $header-height: 50px;
-$aside-width: 100px;
+$aside-width: 200px;
 $menu-height: 50px;
 
 header {
